tests/machine/x/fortran/let_and_print.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/let_and_print.f90:3:3:

    3 |   a = 10
      |   1
Error: Symbol ‘a’ at (1) has no IMPLICIT type
/workspace/mochi/tests/machine/x/fortran/let_and_print.f90:4:3:

    4 |   b = 20
      |   1
Error: Symbol ‘b’ at (1) has no IMPLICIT type

