tests/machine/x/fortran/let_and_print.f90
program main
  implicit none
  a = 10
  b = 20
  print *, (a + b)
end program main
